# apb

./: AGENTS.md  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
crates/apb-cli/: Cargo.toml
crates/apb-cli/src/: input.rs  main.rs  output.rs
crates/apb-core/: Cargo.toml
crates/apb-core/fixtures/: annotated.proto  enums.proto  ga4_event.proto  ga4_event_modified.proto  nested.proto  regenerate.sh  scalars.proto  wellknown.proto
crates/apb-core/src/: lib.rs
crates/apb-core/src/descriptor/: mod.rs  model.rs
crates/apb-core/src/generate/: mod.rs  model.rs
crates/apb-core/src/mapping/: explicit.rs  infer.rs  mod.rs  model.rs  tests.rs
crates/apb-core/src/transcode/: encode.rs  enum_behavior.rs  mod.rs  plan.rs  tests.rs  wire.rs
crates/apb-core/src/types/: coercion.rs  compatibility.rs  mod.rs
crates/apb-core/src/validation/: mod.rs  render.rs  report.rs  tests.rs
crates/apb-source/: Cargo.toml
crates/apb-source/src/: lib.rs
doc/: HIGHLEVEL.md  PLAN.md
doc/plans/: plan-01-scaffold.md  plan-02a-type-system.md  plan-02b-schema-mapping.md  plan-02c-validation-report.md  plan-03-transcoder-scalars.md  plan-04-transcoder-nested.md  plan-05-06-cli.md  plan-05-source-adapters.md  plan-06-cli.md
proto/apb/: apb.proto
